--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,32 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NWork.MainPage">
-
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <!--<Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit" />-->
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Hello World!"
-                Style="{StaticResource SubHeadline}" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+			 xmlns:weekview="clr-namespace:NWork.WeekView"
+             x:Class="NWork.MainPage"
+			 x:Name="this"
+			 BindingContext="{x:Reference this}">
+	<ContentPage.ToolbarItems>
+		<ToolbarItem Text="Log in" Clicked="Login_Clicked" x:Name="LoginButton" />
+	</ContentPage.ToolbarItems>
+	<Border>
+		<weekview:WeekView ViewModel="{Binding ViewModel}"/>
+	</Border>
 </ContentPage>
