--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,9 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:weekview="clr-namespace:NWork.WeekView"
+             xmlns:nwork="clr-namespace:NWork"
              x:Class="NWork.MainPage"
 			 x:Name="this"
-			 BindingContext="{x:Reference this}">
+			 BindingContext="{x:Reference this}"
+			 x:DataType="nwork:MainPage">
 	<ContentPage.ToolbarItems>
 		<ToolbarItem Text="Log in" Clicked="Login_Clicked" x:Name="LoginButton" />
 	</ContentPage.ToolbarItems>
