--- a/WeekView/WeekView.xaml
+++ b/WeekView/WeekView.xaml
@@ -30,9 +30,9 @@
 						</FormattedString>
 					</Label.FormattedText>
 				</Label>
-				<Button Text="&#xf053;" Clicked="PrevWeek" FontFamily="FontAwesome6Free-Solid-900" />
+				<Button Clicked="PrevWeek" Text="{mi:FontAwesomeSolid Icon=ChevronLeft}" HorizontalOptions="Center"/>
 				<Button Text="Today" Clicked="Today"/>
-				<Button Text="&#xf054;" Clicked="NextWeek" FontFamily="FontAwesome6Free-Solid-900" />
+				<Button Clicked="NextWeek" Text="{mi:FontAwesomeSolid Icon=ChevronRight}" HorizontalOptions="Center"/>
 				<ActivityIndicator IsRunning="{Binding ShowSpinner}"/>
 			</HorizontalStackLayout>
 			<HorizontalStackLayout Grid.Column="2" Spacing="10" Padding="10">
