--- a/Pages/EditPage.xaml
+++ b/Pages/EditPage.xaml
@@ -56,15 +56,20 @@
                                         SelectedSuggestion="{Binding SelectedIssue}"
                                         DisplayMemberPath="FullText"
                                         TextMemberPath="FullText"
-                                        TextChanged="AutoCompleteEntry_TextChanged"/>
+                                        TextChanged="AutoCompleteEntry_TextChanged"
+                                        FontSize="{OnPlatform MacCatalyst=14}"/>
                 <Label Text="Date started"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <DatePicker Format="yyyy-mm-dd"/>
-                    <TimePicker Format="H:mm" Margin="115,14,0,0" Grid.Column="1"/>
+                    <Border StrokeThickness="{OnPlatform WinUI=0.0}">
+                        <DatePicker Format="yyyy-mm-dd"/>
+                    </Border>
+                    <Border StrokeThickness="{OnPlatform WinUI=0.0}" Grid.Column="1"  Margin="115,14,0,0">
+                        <TimePicker Format="H:mm"/>
+                    </Border>
                 </Grid>
                 <Label Text="Time spent"/>
                 <Entry Placeholder="Time spent"/>
