--- a/WeekView/WeekView.xaml
+++ b/WeekView/WeekView.xaml
@@ -30,9 +30,23 @@
 						</FormattedString>
 					</Label.FormattedText>
 				</Label>
-                <Button Clicked="PrevWeek" Text="&#xf053;" HorizontalOptions="Center" FontFamily="FontAwesome6Free-Solid-900.otf"/>
+				<OnPlatform x:TypeArguments="Button">
+					<On Platform="WinUI">
+						<Button Clicked="PrevWeek" Text="&#xf053;" HorizontalOptions="Center" FontFamily="FontAwesome6Free-Solid-900.otf"/>				
+					</On>
+					<On Platform="MacCatalyst">
+						<Button Clicked="PrevWeek" Text="{mi:FontAwesomeSolid Icon=ChevronLeft}" HorizontalOptions="Center"/>
+					</On>
+				</OnPlatform>               
 				<Button Text="Today" Clicked="Today"/>
-                <Button Clicked="NextWeek" Text="&#xf054;" HorizontalOptions="Center" FontFamily="FontAwesome6Free-Solid-900.otf"/>
+				<OnPlatform x:TypeArguments="Button">
+					<On Platform="WinUI">
+						<Button Clicked="NextWeek" Text="&#xf054;" HorizontalOptions="Center" FontFamily="FontAwesome6Free-Solid-900.otf"/>				
+					</On>
+					<On Platform="MacCatalyst">
+						<Button Clicked="NextWeek" Text="{mi:FontAwesomeSolid Icon=ChevronRight}" HorizontalOptions="Center"/>
+					</On>
+				</OnPlatform>
 				<ActivityIndicator IsRunning="{Binding ShowSpinner}"/>
 			</HorizontalStackLayout>
 			<HorizontalStackLayout Grid.Column="2" Spacing="10" Padding="10">
