--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -28,6 +28,9 @@
 			<VisualStateGroupList>
 				<VisualStateGroup x:Name="CommonStates">
 					<VisualState x:Name="Normal">
+                        <VisualState.StateTriggers>
+                            <DeviceStateTrigger Device="WinUI" />
+                        </VisualState.StateTriggers>
 						<VisualState.Setters>
 							<Setter Property="BackgroundColor" Value="WhiteSmoke" />
 							<Setter Property="TextColor" Value="DarkSlateGray" />
@@ -35,6 +38,9 @@
 					</VisualState>
 
 					<VisualState x:Name="Pressed">
+                        <VisualState.StateTriggers>
+                            <DeviceStateTrigger Device="WinUI" />
+                        </VisualState.StateTriggers>
 						<VisualState.Setters>
 							<Setter Property="BackgroundColor" Value="LightSkyBlue" />
 							<Setter Property="TextColor" Value="DarkBlue" />
@@ -42,12 +48,18 @@
 					</VisualState>
 
 					<VisualState x:Name="PointerOver">
+                        <VisualState.StateTriggers>
+                            <DeviceStateTrigger Device="WinUI" />
+                        </VisualState.StateTriggers>
 						<VisualState.Setters>
 							<Setter Property="BackgroundColor" Value="Gainsboro" />
 						</VisualState.Setters>
 					</VisualState>
 
                     <VisualState x:Name="Disabled">
+                        <VisualState.StateTriggers>
+                            <DeviceStateTrigger Device="WinUI" />
+                        </VisualState.StateTriggers>
                         <VisualState.Setters>
                             <Setter Property="BackgroundColor" Value="WhiteSmoke" />
                             <Setter Property="TextColor" Value="DarkGray" />
@@ -100,7 +112,7 @@
     <Style TargetType="Editor">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
-        <Setter Property="FontFamily" Value="OpenSansRegular"/>
+        <Setter Property="FontFamily" Value="{OnPlatform OpenSansRegular, MacCatalyst=.SFUI-Light}"/>
         <Setter Property="FontSize" Value="14" />
         <Setter Property="PlaceholderColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="MinimumHeightRequest" Value="44"/>
@@ -122,7 +134,7 @@
     <Style TargetType="Entry">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
-        <Setter Property="FontFamily" Value="OpenSansRegular"/>
+        <Setter Property="FontFamily" Value="{OnPlatform OpenSansRegular, MacCatalyst=.SFUI-Light}"/>
         <Setter Property="FontSize" Value="14" />
         <Setter Property="PlaceholderColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="MinimumHeightRequest" Value="44"/>
@@ -172,7 +184,7 @@
     <Style TargetType="Label">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
-        <Setter Property="FontFamily" Value="OpenSansRegular" />
+        <Setter Property="FontFamily" Value="{OnPlatform OpenSansRegular, MacCatalyst=.SFUI-Light}" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
